--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@
     display: flex;
     position: relative;
     overflow: hidden;
+    background-color: #F2F2F2;
+    z-index: -1;
 }
 
 .header__title {
@@ -197,6 +199,8 @@
     align-items: center;
     flex-direction: column;
     height: 790px;
+    background-color: #F2F2F2;
+    z-index: -1;
 }
 
 .feinman__title {
