--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
+    border: 1px solid red;
+}
+
 .page {
     min-width: 1100px;
     max-width: 1600px;
@@ -76,7 +80,6 @@
 }
 
 .logo_place_footer {
-    flex-basis: 711px;
     background-image: url(../images/logo_white.svg);
 }
 
@@ -247,12 +250,15 @@
     position: relative;
 }
 
-.kaufman__illustration {
+.kaufman__triangle {
     width: 877px;
     height: 877px;
     position: absolute;
     right: -210px;
     top: 0px;
+    background-image: url(../images/triangle.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .footer {
@@ -271,15 +277,28 @@
     position: relative;
 }
 
+.footer__column {
+
+}
+
+.footer__column-info {
+    
+}
+
+.footer__column-social {
+
+}
+
 .footer__column_content_copyright {
-    width: 50%;
+    flex-basis: 711px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .footer__author {
     color: white;
     margin: 18px 0px;
-    position: absolute;
-    bottom: 0px;
     line-height: 25px;
     font-size: 18px;
 }
@@ -293,16 +312,19 @@
 }
 
 .footer__column-links {
-    color: white;
-    text-decoration: none;
-    margin: 0px;
-    line-height: 30px;
-    font-size: 18px;
-    position: relative;
+  list-style-type: none;
+  padding: 0px;
+  margin: 20px 0px 16px;
 }
 
-.footer__column-links:last-of-type {
-    margin-bottom: 16px;
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  margin: 0px;
+  line-height: 30px;
+  font-size: 18px;
+  position: relative;
+
 }
 
 .footer__social-icon {
