--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
-    border: 1px solid red;
-}
-
 .page {
     min-width: 1100px;
     max-width: 1600px;
@@ -17,7 +13,7 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
     position: relative;
     overflow: hidden;
     background-color: #F2F2F2;
-    z-index: -1;
+    z-index: 0;
 }
 
 .header__title {
@@ -44,6 +40,10 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
 .header__link {
     color: #2F80ED;
     text-decoration: none;
+}
+
+.header__link:hover {
+    color: #000000;
 }
 
 .header__main-illustration {
@@ -101,6 +101,7 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
     width: 175px;
     color: #2F80ED;
     margin: 0px;
+    font-weight: normal;
 }
 
 .two-columns__main-text {
@@ -203,7 +204,7 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
     flex-direction: column;
     height: 790px;
     background-color: #F2F2F2;
-    z-index: -1;
+    z-index: 0;
 }
 
 .feinman__title {
@@ -230,6 +231,10 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
     top: 50%;
     right: 48px;
     text-decoration: none;
+}
+
+.feinman__link:hover {
+    color: #2F80ED;
 }
 
 .feinman__illustration {
@@ -278,15 +283,15 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
 }
 
 .footer__column {
-
+    margin: 0px;
 }
 
 .footer__column-info {
-    
+    margin: 0px;
 }
 
 .footer__column-social {
-
+    margin: 0px;
 }
 
 .footer__column_content_copyright {
@@ -312,19 +317,22 @@ div, a, p, h1, h2, h3, h4, li, ul, img, nav, section {
 }
 
 .footer__column-links {
-  list-style-type: none;
-  padding: 0px;
-  margin: 20px 0px 16px;
+    list-style-type: none;
+    padding: 0px;
+    margin: 20px 0px 16px;
 }
 
 .footer__column-link {
-  color: white;
-  text-decoration: none;
-  margin: 0px;
-  line-height: 30px;
-  font-size: 18px;
-  position: relative;
+    color: white;
+    text-decoration: none;
+    margin: 0px;
+    line-height: 30px;
+    font-size: 18px;
+    position: relative;
+}
 
+.footer__column-link:hover {
+    color: #2F80ED;
 }
 
 .footer__social-icon {
