--- a/styles/style.css
+++ b/styles/style.css
@@ -286,11 +286,11 @@
     margin: 0px;
 }
 
-.footer__column-info {
+.footer__column_content_info {
     margin: 0px;
 }
 
-.footer__column-social {
+.footer__column_content_social {
     margin: 0px;
 }
 
