--- a/blocks/section-title/_theme/section-title_theme_dark.css
+++ b/blocks/section-title/_theme/section-title_theme_dark.css
@@ -1,5 +1,5 @@
 .section-title_theme_dark {
-  margin: 90px 0px 20px !important;
+  margin: 90px 0 20px !important;
   color: white !important;
   z-index: 1 !important;
 }
