--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,8 +1,8 @@
 .cards__item {
   max-width: 240px;
-  margin: 60px 100px 0px 0px;
+  margin: 60px 100px 0 0;
 }
 
 .cards__item:nth-of-type(3n) {
-  margin: 60px 0px 0px 0px;
+  margin: 60px 0 0 0;
 }
