--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -2,6 +2,6 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  margin: 43px 0px 16px;
+  margin: 43px 0 16px;
   text-align: center;
 }
