--- a/blocks/feinman/feinman.css
+++ b/blocks/feinman/feinman.css
@@ -5,7 +5,7 @@
 
 .feinman {
   position: relative;
-  margin: 0px 0px 100px;
+  margin: 0 0 100px;
   display: flex;
   align-items: center;
   flex-direction: column;
