--- a/blocks/footer/__cokumn-links/footer__column-links.css
+++ b/blocks/footer/__cokumn-links/footer__column-links.css
@@ -1,5 +1,5 @@
 .footer__column-links {
   list-style-type: none;
-  padding: 0px;
-  margin: 20px 0px 16px;
+  padding: 0;
+  margin: 20px 0 16px;
 }
