--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -1,6 +1,6 @@
 .footer__column-heading {
   color: white;
-  margin: 0px 0px 20px;
+  margin: 0 0 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
