--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,7 +1,7 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
-  margin: 0px;
+  margin: 0;
   line-height: 30px;
   font-size: 18px;
   position: relative;
