--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -2,7 +2,7 @@
   width: 90%;
   min-height: 250px;
   display: flex;
-  margin: 60px 0px 40px;
+  margin: 60px 0 40px;
   justify-content: space-between;
   position: relative;
 }
