--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -2,6 +2,6 @@
   display: inline-block;
   width: 16px;
   height: 16px;
-  margin: 0px 10px 0px 0px;
+  margin: 0 10px 0 0;
   vertical-align: -2px;
 }
