--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -4,7 +4,7 @@
   background-color: #2F80ED;
   position: absolute;
   top: 64px;
-  right: 0px;
+  right: 0;
   z-index: -1;
   transform: rotate(-15deg);
   animation: rotation 20s linear infinite;
