--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -3,7 +3,7 @@
   height: 877px;
   position: absolute;
   right: -210px;
-  top: 0px;
+  top: 0;
   background-image: url(../../../images/triangle.svg);
   background-repeat: no-repeat;
   background-size: cover;
