--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,7 @@
 .khan__book-pic {
   width: 620px;
   height: 608px;
-  margin: 0px 20px 0px 0px;
+  margin: 0 20px 0 0;
   object-fit: cover;
   object-position: left top;
 }
