--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -2,6 +2,6 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 50px 0px 36px;
+  margin: 50px 0 36px;
   max-width: 790px;
 }
