--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,7 @@
 .resources__logo-zone {
   width: 1100px;
-  margin: 80px 0px 217px;
+  margin: 80px 0 217px;
+  display: flex;
+  list-style-type: none;
+  padding: 0;
 }
