--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,6 +1,11 @@
 .video__iframe {
   width: 515px;
   height: 316px;
-  margin: 0px 20px 0px 0px;
-  border: 0px;
+  margin: 0 20px 0 0;
+  border: 0;
 }
+
+.video__iframe:last-of-type {
+  margin: 0;
+}
+
