--- a/blocks/table/__cell/_theme/table__cell_theme_dark.css
+++ b/blocks/table/__cell/_theme/table__cell_theme_dark.css
@@ -1,6 +1,6 @@
 .table__cell_theme_dark {
-  width: 200px !important;
-  color: white !important;
-  margin-right: 0 !important;
-  margin-top: 80px !important;
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
 }
