--- a/blocks/logo/_place/logo_place_footer.css
+++ b/blocks/logo/_place/logo_place_footer.css
@@ -1,3 +1,3 @@
 .logo_place_footer {
-  background-image: url(../../../images/logo_white.svg) !important;
+  background-image: url(../../../images/logo_white.svg);
 }
