--- a/blocks/section-title/_theme/section-title_theme_dark.css
+++ b/blocks/section-title/_theme/section-title_theme_dark.css
@@ -1,5 +1,6 @@
 .section-title_theme_dark {
-  margin: 90px 0 20px !important;
-  color: white !important;
-  z-index: 1 !important;
+  padding: 90px 0 0;
+  color: white;
+  z-index: 1;
 }
+
