--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -3,11 +3,11 @@
 @import url(./__paragraph/two-columns__parahraph.css);
 @import url(./__span-accent/two-columns__span-accent.css);
 @import url(./_section/two-columns_section_oakley.css);
+@import url(./_section/two-columns_section_description.css);
 
 .two-columns {
   display: flex;
   flex-direction: row;
-  margin: 100px auto;
   width: 80%;
   justify-content: space-between;
 }
